--- a/Freelancer_Marketplace/Web.config
+++ b/Freelancer_Marketplace/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="Email" value="vedantbharad26@gmail.com" />
+	  <add key="Password" value="rotc zagv oedh tdpf" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -64,5 +66,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="Freelancer_Marketplace_DBEntities" connectionString="metadata=res://*/Entity.FreelanceDB.csdl|res://*/Entity.FreelanceDB.ssdl|res://*/Entity.FreelanceDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VEDANT\SQLEXPRESS;initial catalog=Freelancer_Marketplace_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="Freelancer_Marketplace_DBEntities" connectionString="metadata=res://*/Entity.FreelanceDB.csdl|res://*/Entity.FreelanceDB.ssdl|res://*/Entity.FreelanceDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VEDANT\SQLEXPRESS;initial catalog=Freelancer_Marketplace_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
